# CyberAgents

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrep.yml  .yamllint  FAME_AND_SHAME.md  PR_DESCRIPTION.md  README.md  SECURITY.md  THIRD_PARTY_SHAME.md  analysis_report.yaml  cyberagents.sh  fix_yaml_formatting.sh  main.py  mypi.ini  package-lock.json  package.json  pr_body.md  pyproject.toml  requirements.txt  run_analysis_script.py  run_tests.sh  setup.sh  test_vuln.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/TEMPLATES/: FAME_AND_SHAME_TEMPLATE.md  PR_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: install_ollama.sh  validate_fame_shame.py
.github/workflows/: manual-release.yml  pr-structure-check.yml  pr-validation.yml  release.yml  semantic-release.yml  test.yml  validate_documentation.yml
agents/: __init__.py  base_agent.py
agents/appsec_engineer_agent/: README.md  __init__.py  agent.yaml  appsec_analysis.md  appsec_engineer_agent.py  test_analysis.md
agents/change_management_analyst/: README.md  agent.yaml
agents/cloud_security_agent/: README.md  __init__.py  agent.yaml  cloud_security_agent.py
agents/compliance_agent/: README.md  agent.yaml
agents/defect_review_agent/: README.md  __init__.py  agent.yaml  defect_review_agent.py
agents/dns_analyzer_agent/: README.md  __init__.py  agent.yaml  dns_analyzer_agent.py  test_dns_analyzer_agent.py
agents/domain_whois_agent/: README.md  __init__.py  agent.yaml  domain_whois_agent.py
agents/email_security_agent/: README.md  __init__.py  agent.yaml  email_security_agent.py
agents/endpoint_security_agent/: README.md  agent.yaml
agents/evidence_collection_agent/: README.md  agent.yaml
agents/exposure_analyst/: README.md  agent.yaml
agents/exposure_analyst_agent/: README.md  __init__.py  agent.yaml  exposure_analyst_agent.py  test_exposure_analyst_agent.py
agents/git_exposure_analyst_agent/: README.md  __init__.py  git_exposure_analyst_agent.py  git_search_tool.py  trufflehog_scanner_tool.py
agents/governance_agent/: README.md  agent.yaml
agents/incident_responder/: README.md  agent.yaml
agents/incident_triage_agent/: README.md  agent.yaml
agents/malware_analysis_agent/: README.md  __init__.py  malware_analysis_agent.py  malware_analysis_agent.yaml  malware_analysis_tool.py
agents/network_security_agent/: README.md  agent.yaml
agents/red_team_agent/: README.md  agent.yaml
agents/response_agent/: README.md  agent.yaml
agents/security_manager_agent/: README.md  __init__.py  agent.yaml  security_manager_agent.py  test_security_manager_agent.py
agents/security_operations_agent/: README.md  agent.yaml
agents/security_reporting_agent/: README.md  agent.yaml
agents/soc_analyst/: README.md  agent.yaml
agents/threat_hunter_agent/: README.md  agent.yaml
agents/threat_intel_agent/: README.md  __init__.py  agent.yaml  threat_intel_agent.py
api/: README.md  main.py
api/agents/: base_agent.py
api/routers/: agents.py
docs/: architecture.md  development_guidelines.md
documentation/: FAME_AND_SHAME.md
examples/: appsec_engineer_example.py  scan_js_project.py  semgrep_scanner_example.py  test_appsec_engineer.py
examples/js_vulnerable_app/: README.md  client.js  index.html  package.json  server.js
examples/results/: .gitignore
examples/test_cases/: vulnerable_python.py  (+1 more)
schemas/: agent.yaml.example  agent_readme_template.md  agent_schema.yaml  tool_schema.yaml  tool_schema.yaml.example  tool_template.md  workflow_schema.yaml
scripts/: run_semgrep.sh  validate_agent_structure.py  validate_yaml.py
tests/: __init__.py  conftest.py  test_agent_suite.py  test_agents.py  test_base_agent.py  test_crew.py  test_crew_integration.py  test_main.py  test_security.py  test_yaml_validation.py
tools/: README.md  __init__.py  asn_ip_lookup_tool.py  email_validation_tool.py  nmap_port_scan_tool.py  shodan_tool.py  subdomain_finder_tool.py  test_asn_ip_lookup_tool.py  test_nmap_port_scan_tool.py  validation_utils.py  whois_tool.py
utils/: exceptions.py  llm_utils.py  rate_limiter.py  validation_utils.py
workflows/: README.md  incident_response.yaml
(+113 files in other folders)
