[tool.poetry]
name = "cyberagents"
version = "0.1.0"
description = "A Python project for cyber intelligence agents"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "api" },
    { include = "agents" },
    { include = "tools" },
    { include = "utils" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0.1"
jsonschema = "^4.21.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pre-commit = "^3.3.3"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.1"
crewai = "^0.108.0"
python-dotenv = "^1.0.1"
python-whois = "^0.8.0"
dnspython = "^2.4.2"
requests = "^2.31.0"
vt-py = "^0.18.0"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
openai = "^1.6.1"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation = "^0.43b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-instrumentation-logging = "^0.43b0"
opentelemetry-instrumentation-requests = "^0.43b0"
opentelemetry-instrumentation-asyncpg = "^0.43b0"
pytest-picked = {version = "^0.4.6", optional = true}
rich = ">=13.7.1,<13.8.0"
shodan = "^1.31.0"
ipwhois = "^1.3.0"
python-nmap = "^0.7.1"

[tool.poetry.extras]
test = ["pytest-picked"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "agents",
    "tools"
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore::UserWarning:pydantic.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
    "ignore:open_text is deprecated. Use files():DeprecationWarning:litellm.*"
]
